adds footer markup and style to index.html

--- a/index.html
+++ b/index.html
@@ -18,30 +18,41 @@
 				<img src="images/phones.png">
 			</section>
 			<section id='col-2'>
-				<div class="brand-container">
+				<div id="brand-container">
 					<img id="brand-img" src="images/brand.png">
-					<button type="button">
+					<button id="button" type="button">
 						<img id="home-img" src="images/home.png">
-						<p>Log In</p>
+						<p id='button-p'>Log In</p>
 					</button>
 				</div>
 				<section id="frame">
-					<h1>Capture and Share the World's Moments</h1>
+					<h1>Capture and Share</h1> 
+					<h1>the World's Moments</h1>
 					<p>Instagram is a <em>fast</em>, <em>beautiful</em> and <em>fun</em> way to share your life with friends and family.</p>
 					<p>Take a picture or video, choose a fiter to transform its look and feel, then post to Instagram - it's that easy. You can even share to Facebook, Twiiter and more. It's a new way to see the world.</p>
 					<p>Oh yeah, did we mention it's free?</p>
-					<section id="badge-container">
+					<div id="badge-container">
 						<img src="images/badge-iphone.png">
 						<img src="images/badge-android.png">
-					</section>
+					</div>
 				</section>
 			</section>
+			<footer>
+				<section id="footer-container">
+					<a href="#">ABOUT US</a>
+					<a href="#">SUPPORT</a>
+					<a href="#">BLOG</a>
+					<a href="#">PRESS</a>
+					<a href="#">API</a>
+					<a href="#">JOBS</a>
+					<a href="#">PRIVACY</a>
+					<a href="#">TERMS</a>
+					<p id="copy-right"> &copy;2014 Instagram</p>
+				</section>
+			</footer>
 		</div>
 	</main>
 
-	<footer>
-
-	</footer>
 
 </body>
 </html>
