--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+	<link rel="icon" sizes="192x192" href="/static/images/ico/favicon-192.png/b407fa101800.png">
 </head>
 <body>
 	<section id="top-bg"></section>
@@ -32,8 +33,8 @@
 					<p>Take a picture or video, choose a fiter to transform its look and feel, then post to Instagram - it's that easy. You can even share to Facebook, Twiiter and more. It's a new way to see the world.</p>
 					<p>Oh yeah, did we mention it's free?</p>
 					<div id="badge-container">
-						<img src="images/badge-iphone.png">
-						<img src="images/badge-android.png">
+						<a href="https://itunes.apple.com/us/app/instagram/id389801252?mt=8"><img src="images/badge-iphone.png"></a>
+						<a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=en"><img src="images/badge-android.png"></a>
 					</div>
 				</section>
 			</section>
