--- a/index.html
+++ b/index.html
@@ -1,59 +1,68 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!--Title-->
 	<title>Instagram</title>
+	<!--META-->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!--Style Sheets-->
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<!--Montserrat Font-->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-	<link rel="icon" sizes="192x192" href="/static/images/ico/favicon-192.png/b407fa101800.png">
 </head>
-<body>
-	<section id="top-bg"></section>
-	<section id="botton-bg"></section>
-	
-	<main>
-		<div class="container">
-			<section id="col-1">
-				<img src="images/phones.png">
-			</section>
-			<section id='col-2'>
-				<div id="brand-container">
-					<img id="brand-img" src="images/brand.png">
-					<button id="button" type="button">
-						<img id="home-img" src="images/home.png">
-						<p id='button-p'>Log In</p>
-					</button>
-				</div>
-				<section id="frame">
-					<h1>Capture and Share</h1> 
-					<h1>the World's Moments</h1>
-					<p>Instagram is a <em>fast</em>, <em>beautiful</em> and <em>fun</em> way to share your life with friends and family.</p>
-					<p>Take a picture or video, choose a fiter to transform its look and feel, then post to Instagram - it's that easy. You can even share to Facebook, Twiiter and more. It's a new way to see the world.</p>
-					<p>Oh yeah, did we mention it's free?</p>
-					<div id="badge-container">
-						<a href="https://itunes.apple.com/us/app/instagram/id389801252?mt=8"><img src="images/badge-iphone.png"></a>
-						<a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=en"><img src="images/badge-android.png"></a>
-					</div>
-				</section>
-			</section>
-			<footer>
-				<section id="footer-container">
-					<a href="#">ABOUT US</a>
-					<a href="#">SUPPORT</a>
-					<a href="#">BLOG</a>
-					<a href="#">PRESS</a>
-					<a href="#">API</a>
-					<a href="#">JOBS</a>
-					<a href="#">PRIVACY</a>
-					<a href="#">TERMS</a>
-					<p id="copy-right"> &copy;2014 Instagram</p>
-				</section>
-			</footer>
-		</div>
-	</main>
-
-
-</body>
+	<body>
+		<!--Top Blue Section-->
+		<section id="top-bg"></section>
+		<!--Bottem White Section-->
+		<section id="botton-bg"></section>
+		<!--Main Content-->
+		<main>
+			<div class="container">
+			<!--Left Colum-->
+				<section id="col-1">
+					<img src="images/phones.png">
+				</section> <!--col-1->
+				<!--Right Colum-->
+				<section id='col-2'>
+					<div id="brand-container">
+						<!--Instagram Branding Logo-->
+						<img id="brand-img" src="images/brand.png">
+						<!--Home Button / Login Button-->
+						<button id="button" type="button">
+							<img id="home-img" src="images/home.png">
+							<p id='button-p'>Log In</p>
+						</button>
+					</div><!--Brand Contianer-->
+					<!--Text Frame-->
+					<section id="frame">
+						<h1>Capture and Share</h1> 
+						<h1>the World's Moments</h1>
+						<p>Instagram is a <em>fast</em>, <em>beautiful</em> and <em>fun</em> way to share your life with friends and family.</p>
+						<p>Take a picture or video, choose a fiter to transform its look and feel, then post to Instagram - it's that easy. You can even share to Facebook, Twiiter and more. It's a new way to see the world.</p>
+						<p>Oh yeah, did we mention it's free?</p>
+						<!--Badge Links-->
+						<div id="badge-container">
+							<a href="https://itunes.apple.com/us/app/instagram/id389801252?mt=8"><img src="images/badge-iphone.png"></a>
+							<a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=en"><img src="images/badge-android.png"></a>
+						</div><!--Badge Container-->
+					</section><!--Frame-->
+				</section><!--col-2-->
+				<footer>
+					<section id="footer-container">
+						<a href="#">ABOUT US</a>
+						<a href="#">SUPPORT</a>
+						<a href="#">BLOG</a>
+						<a href="#">PRESS</a>
+						<a href="#">API</a>
+						<a href="#">JOBS</a>
+						<a href="#">PRIVACY</a>
+						<a href="#">TERMS</a>
+						<p id="copy-right"> &copy;2014 Instagram</p>
+					</section><!--footer-container-->
+				</footer><!--footer->
+			</div> <!--Container-->
+		</main><!--end main-->
+	</body>
 </html>
