adds comments and style

--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
 			<div class="container">
 			<!--Left Colum-->
 				<section id="col-1">
-					<img src="images/phones.png">
+					<img src="images/phones.png" alt="iPhones">
 				</section> <!--col-1->
 				<!--Right Colum-->
 				<section id='col-2'>
 					<div id="brand-container">
 						<!--Instagram Branding Logo-->
-						<img id="brand-img" src="images/brand.png">
+						<img id="brand-img" src="images/brand.png" alt="brand-img-logo">
 						<!--Home Button / Login Button-->
 						<button id="button" type="button">
-							<img id="home-img" src="images/home.png">
+							<img id="home-img" src="images/home.png" alt="home-icon">
 							<p id='button-p'>Log In</p>
 						</button>
 					</div><!--Brand Contianer-->
@@ -44,24 +44,27 @@
 						<p>Oh yeah, did we mention it's free?</p>
 						<!--Badge Links-->
 						<div id="badge-container">
-							<a href="https://itunes.apple.com/us/app/instagram/id389801252?mt=8"><img src="images/badge-iphone.png"></a>
-							<a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=en"><img src="images/badge-android.png"></a>
+							<a href="https://itunes.apple.com/us/app/instagram/id389801252?mt=8"><img src="images/badge-iphone.png" alt="Instagram Apple Store Badge"></a>
+							<a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=en"><img src="images/badge-android.png" alt="Instagram Google Play Store Badge"></a>
 						</div><!--Badge Container-->
 					</section><!--Frame-->
 				</section><!--col-2-->
 				<footer>
 					<section id="footer-container">
-						<a href="#">ABOUT US</a>
-						<a href="#">SUPPORT</a>
-						<a href="#">BLOG</a>
-						<a href="#">PRESS</a>
-						<a href="#">API</a>
-						<a href="#">JOBS</a>
-						<a href="#">PRIVACY</a>
-						<a href="#">TERMS</a>
+						<ul>
+							<li><a href="#">ABOUT US</a></li>
+							<li><a href="#">SUPPORT</a></li>
+							<li><a href="#">BLOG</a></li>
+							<li><a href="#">PRESS</a></li>
+							<li><a href="#">API</a></li>
+							<li><a href="#">JOBS</a></li>
+							<li><a href="#">PRIVACY</a></li>
+							<li><a href="#">TERMS</a></li>
+						</ul>
 						<p id="copy-right"> &copy;2014 Instagram</p>
+						
 					</section><!--footer-container-->
-				</footer><!--footer->
+				</footer><!--footer-->
 			</div> <!--Container-->
 		</main><!--end main-->
 	</body>
