Small color changes and more comments

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<!--Instagram Branding Logo-->
 						<img id="brand-img" src="images/brand.png" alt="brand-img-logo">
 						<!--Home Button / Login Button-->
-						<button id="button" type="button">
+						<button id="button" href="#" type="button">
 							<img id="home-img" src="images/home.png" alt="home-icon">
 							<p id='button-p'>Log In</p>
 						</button>
